prod/homelan/4-whoami-test/whoami-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-route-tls
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.kirbyware.com`) 
      kind: Rule
      # middlewares:
      #   - name: test-stripprefix
      #     namespace: test
      services:    
      - kind: Service
        name: whoami
        namespace: test
        port: 80
  tls:
    # options:
    #   name: tlsoptions
    #   namespace: traefik
    secretName: test-kirbyware-com-production-tls
    store:
      name: default
      namespace: traefik
